; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_autotrust.c_autr_write_contents.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_autotrust.c_autr_write_contents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trust_anchor = type { %struct.TYPE_2__*, i32, i32, i32 }
%struct.TYPE_2__ = type { %struct.autr_ta*, i64, i64, i64, i64, i64, i64, i64 }
%struct.autr_ta = type { i64, i64, i64, i32, i32, i32, %struct.autr_ta* }

@.str = private unnamed_addr constant [31 x i8] c"; autotrust trust anchor file\0A\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"could not write to %s: %s\00", align 1
@errno = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [11 x i8] c";;REVOKED\0A\00", align 1
@.str.3 = private unnamed_addr constant [229 x i8] c"; The zone has all keys revoked, and is\0A; considered as if it has no trust anchors.\0A; the remainder of the file is the last probe.\0A; to restart the trust anchor, overwrite this file.\0A; with one containing valid DNSKEYs or DSes.\0A\00", align 1
@.str.4 = private unnamed_addr constant [24 x i8] c";;last_queried: %u ;;%s\00", align 1
@.str.5 = private unnamed_addr constant [24 x i8] c";;last_success: %u ;;%s\00", align 1
@.str.6 = private unnamed_addr constant [27 x i8] c";;next_probe_time: %u ;;%s\00", align 1
@.str.7 = private unnamed_addr constant [20 x i8] c";;query_failed: %d\0A\00", align 1
@.str.8 = private unnamed_addr constant [22 x i8] c";;query_interval: %d\0A\00", align 1
@.str.9 = private unnamed_addr constant [18 x i8] c";;retry_time: %d\0A\00", align 1
@AUTR_STATE_START = common dso_local global i64 0, align 8
@AUTR_STATE_REMOVED = common dso_local global i64 0, align 8
@LDNS_RR_TYPE_DNSKEY = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [26 x i8] c"malloc failure writing %s\00", align 1
@.str.11 = private unnamed_addr constant [51 x i8] c"%s ;;state=%d [%s] ;;count=%d ;;lastchange=%u ;;%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, %struct.trust_anchor*)* @autr_write_contents to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @autr_write_contents(i32* %0, i8* %1, %struct.trust_anchor* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.trust_anchor*, align 8
  %8 = alloca [32 x i8], align 16
  %9 = alloca %struct.autr_ta*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.trust_anchor* %2, %struct.trust_anchor** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i64 (i32*, i8*, ...) @fprintf(i32* %11, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* @errno, align 4
  %17 = call i32 @strerror(i32 %16)
  %18 = call i32 (i8*, i8*, ...) @log_err(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i8* %15, i32 %17)
  store i32 0, i32* %4, align 4
  br label %241

19:                                               ; preds = %3
  %20 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %21 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 7
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %40

26:                                               ; preds = %19
  %27 = load i32*, i32** %5, align 8
  %28 = call i64 (i32*, i8*, ...) @fprintf(i32* %27, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %29 = icmp slt i64 %28, 0
  br i1 %29, label %34, label %30

30:                                               ; preds = %26
  %31 = load i32*, i32** %5, align 8
  %32 = call i64 (i32*, i8*, ...) @fprintf(i32* %31, i8* getelementptr inbounds ([229 x i8], [229 x i8]* @.str.3, i64 0, i64 0))
  %33 = icmp slt i64 %32, 0
  br i1 %33, label %34, label %39

34:                                               ; preds = %30, %26
  %35 = load i8*, i8** %6, align 8
  %36 = load i32, i32* @errno, align 4
  %37 = call i32 @strerror(i32 %36)
  %38 = call i32 (i8*, i8*, ...) @log_err(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i8* %35, i32 %37)
  store i32 0, i32* %4, align 4
  br label %241

39:                                               ; preds = %30
  br label %40

40:                                               ; preds = %39, %19
  %41 = load i32*, i32** %5, align 8
  %42 = load i8*, i8** %6, align 8
  %43 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %44 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %43, i32 0, i32 3
  %45 = load i32, i32* %44, align 8
  %46 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %47 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %46, i32 0, i32 2
  %48 = load i32, i32* %47, align 4
  %49 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %50 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @print_id(i32* %41, i8* %42, i32 %45, i32 %48, i32 %51)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %55, label %54

54:                                               ; preds = %40
  store i32 0, i32* %4, align 4
  br label %241

55:                                               ; preds = %40
  %56 = load i32*, i32** %5, align 8
  %57 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %58 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %57, i32 0, i32 0
  %59 = load %struct.TYPE_2__*, %struct.TYPE_2__** %58, align 8
  %60 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %59, i32 0, i32 6
  %61 = load i64, i64* %60, align 8
  %62 = trunc i64 %61 to i32
  %63 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %64 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %63, i32 0, i32 0
  %65 = load %struct.TYPE_2__*, %struct.TYPE_2__** %64, align 8
  %66 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %65, i32 0, i32 6
  %67 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %68 = call i8* @ctime_r(i64* %66, i8* %67)
  %69 = call i64 (i32*, i8*, ...) @fprintf(i32* %56, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i64 0, i64 0), i32 %62, i8* %68)
  %70 = icmp slt i64 %69, 0
  br i1 %70, label %133, label %71

71:                                               ; preds = %55
  %72 = load i32*, i32** %5, align 8
  %73 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %74 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %73, i32 0, i32 0
  %75 = load %struct.TYPE_2__*, %struct.TYPE_2__** %74, align 8
  %76 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %75, i32 0, i32 5
  %77 = load i64, i64* %76, align 8
  %78 = trunc i64 %77 to i32
  %79 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %80 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %79, i32 0, i32 0
  %81 = load %struct.TYPE_2__*, %struct.TYPE_2__** %80, align 8
  %82 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %81, i32 0, i32 5
  %83 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %84 = call i8* @ctime_r(i64* %82, i8* %83)
  %85 = call i64 (i32*, i8*, ...) @fprintf(i32* %72, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.5, i64 0, i64 0), i32 %78, i8* %84)
  %86 = icmp slt i64 %85, 0
  br i1 %86, label %133, label %87

87:                                               ; preds = %71
  %88 = load i32*, i32** %5, align 8
  %89 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %90 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %89, i32 0, i32 0
  %91 = load %struct.TYPE_2__*, %struct.TYPE_2__** %90, align 8
  %92 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %91, i32 0, i32 4
  %93 = load i64, i64* %92, align 8
  %94 = trunc i64 %93 to i32
  %95 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %96 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %95, i32 0, i32 0
  %97 = load %struct.TYPE_2__*, %struct.TYPE_2__** %96, align 8
  %98 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %97, i32 0, i32 4
  %99 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %100 = call i8* @ctime_r(i64* %98, i8* %99)
  %101 = call i64 (i32*, i8*, ...) @fprintf(i32* %88, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.6, i64 0, i64 0), i32 %94, i8* %100)
  %102 = icmp slt i64 %101, 0
  br i1 %102, label %133, label %103

103:                                              ; preds = %87
  %104 = load i32*, i32** %5, align 8
  %105 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %106 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %105, i32 0, i32 0
  %107 = load %struct.TYPE_2__*, %struct.TYPE_2__** %106, align 8
  %108 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %107, i32 0, i32 3
  %109 = load i64, i64* %108, align 8
  %110 = trunc i64 %109 to i32
  %111 = call i64 (i32*, i8*, ...) @fprintf(i32* %104, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i64 0, i64 0), i32 %110)
  %112 = icmp slt i64 %111, 0
  br i1 %112, label %133, label %113

113:                                              ; preds = %103
  %114 = load i32*, i32** %5, align 8
  %115 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %116 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %115, i32 0, i32 0
  %117 = load %struct.TYPE_2__*, %struct.TYPE_2__** %116, align 8
  %118 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %117, i32 0, i32 2
  %119 = load i64, i64* %118, align 8
  %120 = trunc i64 %119 to i32
  %121 = call i64 (i32*, i8*, ...) @fprintf(i32* %114, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.8, i64 0, i64 0), i32 %120)
  %122 = icmp slt i64 %121, 0
  br i1 %122, label %133, label %123

123:                                              ; preds = %113
  %124 = load i32*, i32** %5, align 8
  %125 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %126 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %125, i32 0, i32 0
  %127 = load %struct.TYPE_2__*, %struct.TYPE_2__** %126, align 8
  %128 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %127, i32 0, i32 1
  %129 = load i64, i64* %128, align 8
  %130 = trunc i64 %129 to i32
  %131 = call i64 (i32*, i8*, ...) @fprintf(i32* %124, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.9, i64 0, i64 0), i32 %130)
  %132 = icmp slt i64 %131, 0
  br i1 %132, label %133, label %138

133:                                              ; preds = %123, %113, %103, %87, %71, %55
  %134 = load i8*, i8** %6, align 8
  %135 = load i32, i32* @errno, align 4
  %136 = call i32 @strerror(i32 %135)
  %137 = call i32 (i8*, i8*, ...) @log_err(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i8* %134, i32 %136)
  store i32 0, i32* %4, align 4
  br label %241

138:                                              ; preds = %123
  %139 = load %struct.trust_anchor*, %struct.trust_anchor** %7, align 8
  %140 = getelementptr inbounds %struct.trust_anchor, %struct.trust_anchor* %139, i32 0, i32 0
  %141 = load %struct.TYPE_2__*, %struct.TYPE_2__** %140, align 8
  %142 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %141, i32 0, i32 0
  %143 = load %struct.autr_ta*, %struct.autr_ta** %142, align 8
  store %struct.autr_ta* %143, %struct.autr_ta** %9, align 8
  br label %144

144:                                              ; preds = %236, %138
  %145 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %146 = icmp ne %struct.autr_ta* %145, null
  br i1 %146, label %147, label %240

147:                                              ; preds = %144
  %148 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %149 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %148, i32 0, i32 0
  %150 = load i64, i64* %149, align 8
  %151 = load i64, i64* @AUTR_STATE_START, align 8
  %152 = icmp eq i64 %150, %151
  br i1 %152, label %153, label %154

153:                                              ; preds = %147
  br label %236

154:                                              ; preds = %147
  %155 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %156 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %155, i32 0, i32 0
  %157 = load i64, i64* %156, align 8
  %158 = load i64, i64* @AUTR_STATE_REMOVED, align 8
  %159 = icmp eq i64 %157, %158
  br i1 %159, label %160, label %161

160:                                              ; preds = %154
  br label %236

161:                                              ; preds = %154
  %162 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %163 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %162, i32 0, i32 4
  %164 = load i32, i32* %163, align 4
  %165 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %166 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %165, i32 0, i32 3
  %167 = load i32, i32* %166, align 8
  %168 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %169 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %168, i32 0, i32 5
  %170 = load i32, i32* %169, align 8
  %171 = call i64 @sldns_wirerr_get_type(i32 %164, i32 %167, i32 %170)
  %172 = load i64, i64* @LDNS_RR_TYPE_DNSKEY, align 8
  %173 = icmp ne i64 %171, %172
  br i1 %173, label %174, label %175

174:                                              ; preds = %161
  br label %236

175:                                              ; preds = %161
  %176 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %177 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %176, i32 0, i32 4
  %178 = load i32, i32* %177, align 4
  %179 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %180 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %179, i32 0, i32 3
  %181 = load i32, i32* %180, align 8
  %182 = call i8* @sldns_wire2str_rr(i32 %178, i32 %181)
  store i8* %182, i8** %10, align 8
  %183 = load i8*, i8** %10, align 8
  %184 = icmp ne i8* %183, null
  br i1 %184, label %185, label %190

185:                                              ; preds = %175
  %186 = load i8*, i8** %10, align 8
  %187 = getelementptr inbounds i8, i8* %186, i64 0
  %188 = load i8, i8* %187, align 1
  %189 = icmp ne i8 %188, 0
  br i1 %189, label %195, label %190

190:                                              ; preds = %185, %175
  %191 = load i8*, i8** %10, align 8
  %192 = call i32 @free(i8* %191)
  %193 = load i8*, i8** %6, align 8
  %194 = call i32 (i8*, i8*, ...) @log_err(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.10, i64 0, i64 0), i8* %193)
  store i32 0, i32* %4, align 4
  br label %241

195:                                              ; preds = %185
  %196 = load i8*, i8** %10, align 8
  %197 = load i8*, i8** %10, align 8
  %198 = call i32 @strlen(i8* %197)
  %199 = sub nsw i32 %198, 1
  %200 = sext i32 %199 to i64
  %201 = getelementptr inbounds i8, i8* %196, i64 %200
  store i8 0, i8* %201, align 1
  %202 = load i32*, i32** %5, align 8
  %203 = load i8*, i8** %10, align 8
  %204 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %205 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %204, i32 0, i32 0
  %206 = load i64, i64* %205, align 8
  %207 = trunc i64 %206 to i32
  %208 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %209 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %208, i32 0, i32 0
  %210 = load i64, i64* %209, align 8
  %211 = call i8* @trustanchor_state2str(i64 %210)
  %212 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %213 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %212, i32 0, i32 2
  %214 = load i64, i64* %213, align 8
  %215 = trunc i64 %214 to i32
  %216 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %217 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %216, i32 0, i32 1
  %218 = load i64, i64* %217, align 8
  %219 = trunc i64 %218 to i32
  %220 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %221 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %220, i32 0, i32 1
  %222 = getelementptr inbounds [32 x i8], [32 x i8]* %8, i64 0, i64 0
  %223 = call i8* @ctime_r(i64* %221, i8* %222)
  %224 = call i64 (i32*, i8*, ...) @fprintf(i32* %202, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.11, i64 0, i64 0), i8* %203, i32 %207, i8* %211, i32 %215, i32 %219, i8* %223)
  %225 = icmp slt i64 %224, 0
  br i1 %225, label %226, label %233

226:                                              ; preds = %195
  %227 = load i8*, i8** %6, align 8
  %228 = load i32, i32* @errno, align 4
  %229 = call i32 @strerror(i32 %228)
  %230 = call i32 (i8*, i8*, ...) @log_err(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i8* %227, i32 %229)
  %231 = load i8*, i8** %10, align 8
  %232 = call i32 @free(i8* %231)
  store i32 0, i32* %4, align 4
  br label %241

233:                                              ; preds = %195
  %234 = load i8*, i8** %10, align 8
  %235 = call i32 @free(i8* %234)
  br label %236

236:                                              ; preds = %233, %174, %160, %153
  %237 = load %struct.autr_ta*, %struct.autr_ta** %9, align 8
  %238 = getelementptr inbounds %struct.autr_ta, %struct.autr_ta* %237, i32 0, i32 6
  %239 = load %struct.autr_ta*, %struct.autr_ta** %238, align 8
  store %struct.autr_ta* %239, %struct.autr_ta** %9, align 8
  br label %144

240:                                              ; preds = %144
  store i32 1, i32* %4, align 4
  br label %241

241:                                              ; preds = %240, %226, %190, %133, %54, %34, %14
  %242 = load i32, i32* %4, align 4
  ret i32 %242
}

declare dso_local i64 @fprintf(i32*, i8*, ...) #1

declare dso_local i32 @log_err(i8*, i8*, ...) #1

declare dso_local i32 @strerror(i32) #1

declare dso_local i32 @print_id(i32*, i8*, i32, i32, i32) #1

declare dso_local i8* @ctime_r(i64*, i8*) #1

declare dso_local i64 @sldns_wirerr_get_type(i32, i32, i32) #1

declare dso_local i8* @sldns_wire2str_rr(i32, i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @trustanchor_state2str(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
